FKDK-879 Fix jumping scroll in Chrome

--- a/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
@@ -33,20 +33,10 @@ $desktop-margin-default: 30px;
     display: block;
   }
 
-  .views-slideshow-cycle-main-frame {
-    height: 100% !important;
-    position: static !important;
-  }
-
   .views-slideshow-cycle-main-frame-row {
-    position: static !important;
-    height: 100% !important;
+    width: 100% !important;
   }
 
-  .views_slideshow_main {
-    min-height: 372px;
-    overflow: hidden;
-  }
   .views_slideshow_cycle_main.views_slideshow_main.viewsSlideshowCycle-processed{
     display: flex;
     align-items: center;
